--- a/src/app/heroes.component.css
+++ b/src/app/heroes.component.css
@@ -45,3 +45,14 @@
 	margin-right: .8em;
 	border-radius: 4px 0 0 4px;
 }
+button.delete {
+	float:right;
+	margin-top: 2px;
+	margin-right: .8em;
+	background-color: gray !important;
+	color:white;
+}
+button.delete:hover {
+	background-color: darkred !important;
+	color:white;
+}
